--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "slate-edit-list",
+  "name": "front-slate-edit-list",
   "description": "A Slate plugin to handle keyboard events in lists.",
-  "version": "0.12.2",
+  "version": "0.12.2-1",
   "license": "Apache-2.0",
   "repository": "git://github.com/GitbookIO/slate-edit-list.git",
   "main": "./dist/index.js",
@@ -54,7 +54,6 @@
     "build:dist": "rm -r ./dist; babel ./lib --out-dir ./dist",
     "build:flow": "flow-copy-source -v ./lib/ ./dist/",
     "prepublish": "npm run build:dist && npm run build:flow",
-    "postpublish": "npm run deploy-example",
     "lint": "eslint ./",
     "build-example": "browserify ./example/main.js -o ./example/bundle.js -t [ babelify --presets [ env react stage-0 ] ] -t [ stringify --extensions [.yaml] ]",
     "serve-example": "http-server ./example/ -p 8081",
