--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "front-slate-edit-list",
+  "name": "@kudlik/slate-edit-list",
   "description": "A Slate plugin to handle keyboard events in lists.",
-  "version": "0.12.2-1",
+  "version": "0.13.0",
   "license": "Apache-2.0",
-  "repository": "git://github.com/GitbookIO/slate-edit-list.git",
+  "repository": "git://github.com:kudlajz/slate-edit-list.git",
   "main": "./dist/index.js",
   "peerDependencies": {
     "immutable": "^3.8.2",
