Forked slate-edit-list

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@kudlik/slate-edit-list",
+  "name": "@prezly/slate-edit-list",
   "description": "A Slate plugin to handle keyboard events in lists.",
   "version": "0.13.0",
   "license": "Apache-2.0",
-  "repository": "git://github.com:kudlajz/slate-edit-list.git",
+  "repository": "git://github.com:prezly/slate-edit-list.git",
   "main": "./dist/index.js",
   "peerDependencies": {
     "immutable": "^3.8.2",
